test/core/errors/identifiers_error/zs/clashing_identifiers/clashing_union_field_names_error.zs
package clashing_identifiers.clashing_union_field_names_error;

union Union
{
    uint8 field1;
    uint8 Field1;
};
